--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,154 @@
-/* место для вашего кода */
+/* Header ----------------------------------------------------------------- */
+.header {
+  display: grid;
+  grid-template-columns: 1fr 148px 1fr;
+  margin-bottom: 92px;
+  padding: 92px 25px 0 25px;
+}
+
+.header__menu {
+  align-self: center;
+}
+
+.header__links-list {
+  display: flex;
+  gap: 32px;
+  align-self: center;
+  font-size: 18px;
+  list-style: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style: none;
+}
+
+.header__link {
+  border-bottom: 1px solid;
+  text-decoration: none;
+}
+
+.header__link_active {
+  border-bottom: none;
+  text-decoration: none;
+}
+
+.header__logo-image {
+  height: 105px;
+}
+
+.header__address {
+  justify-self: end;
+}
+
+.address {
+  display: flex;
+  flex-direction: column;
+  width: 240px;
+  padding-top: 5px;
+  font-size: 18px;
+  font-style: normal;
+  line-height: 135%;
+}
+
+.address-links {
+  width: fit-content;
+  border-bottom: 1px solid;
+  line-height: 130%;
+  text-decoration: none;
+}
+/* /Header ----------------------------------------------------------------- */
+
+
+
+/* Cover ----------------------------------------------------------------- */
+.cover {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 165px 24px 50px;
+  color: #fff;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.cover__image {
+  position: absolute;
+  inset: 0;
+  z-index: 0;
+  height: 100%;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.cover__title {
+  z-index: 10; 
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  font-weight: 700;
+  font-size: 100px;
+  line-height: 100%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  line-height: 115%;
+}
+
+.aligned-text_center {
+  align-self: center;
+}
+
+.aligned-text_right {
+  align-self: flex-end;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover__description {
+  z-index: 10;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 78px;
+  padding-top: 135px;
+}
+
+.cover__description-text {
+  font-weight: 400;
+  font-size: 22px;
+  font-style: normal;
+  line-height: 127.273%;
+  text-transform: uppercase;
+  word-spacing: 17px;
+}
+
+.cover__description-text-extended {
+  word-spacing: 22px;
+}
+
+.bet-button {
+  border: 1px solid;
+  padding: 12px 32px;
+  color: #fff;
+  font-family: Raleway, sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  font-style: normal;
+  text-transform: uppercase;
+  background-color: transparent;
+}
+
