--- a/styles/style.css
+++ b/styles/style.css
@@ -87,7 +87,7 @@
 }
 
 .cover__title {
-  z-index: 10;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -119,7 +119,7 @@
 }
 
 .cover__description {
-  z-index: 10;
+  z-index: 2;
   display: flex;
   justify-content: end;
   align-items: center;
@@ -130,7 +130,6 @@
 .cover__description-text {
   font-weight: 400;
   font-size: 22px;
-  font-style: normal;
   line-height: 127.273%;
   text-transform: uppercase;
   word-spacing: 17px;
@@ -147,7 +146,6 @@
   font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 22px;
-  font-style: normal;
   text-transform: uppercase;
   background-color: transparent;
 }
@@ -161,8 +159,6 @@
 }
 
 .lots__heading {
-  color: #000;
-  font-family: Raleway;
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
@@ -171,19 +167,17 @@
 
 .lots__card-list {
   display: flex;
-  justify-content: space-between;
-  list-style: none;
+  list-style: none;  
+  gap: 25px;
+  flex-wrap: wrap;
 }
 
 .lots__card-list-item {
-  width: 334px;
   min-height: 600px;
+  width: 334px;
 }
 
 .card-link {
-  display: block;
-  height: 100%;
-  box-sizing: border-box;
   text-decoration: none;
 }
 
@@ -203,9 +197,7 @@
 
 .card__title {
   padding: 50px 40px 0;
-  font-family: Raleway;
   font-size: 22px;
-  font-style: normal;
   font-weight: 700;
   line-height: 120%;
   text-decoration-line: underline;
@@ -214,13 +206,11 @@
 }
 
 .card__title-extended {
-  word-spacing: 5px;
+  word-spacing: 5px; /* В макете два пробела между "который" и "бросил", увеличил отступ, для соответствия макету */
 }
 
 .card__text {
-  font-family: Raleway;
   font-size: 20px;
-  font-weight: 400;
   line-height: 120%;
   padding: 0 40px 50px;
   z-index: 2;
@@ -231,7 +221,7 @@
 }
 
 .ellipsis {
-  letter-spacing: -1px; /* Сделал чтобы совпадало с макетом */
+  letter-spacing: -1px; /* отступ у точек в троеточии уменьшил Сделал чтобы совпадало с макетом */
 }
 
 .lots__look-more-link {
