маленькие фиксы грида

--- a/styles/style.css
+++ b/styles/style.css
@@ -175,6 +175,7 @@
 
 .lots__card-list-item {
   min-height: 600px;
+  justify-self: center; /* тк я ограничил максимальную ширину элемента, то при большом расширении страницы, элементы уезжали чуть влево, сейчас поправил */
 }
 
 .card-link {
