--- a/styles/style.css
+++ b/styles/style.css
@@ -148,6 +148,7 @@
   font-size: 22px;
   text-transform: uppercase;
   background-color: transparent;
+  cursor: pointer;
 }
 /* /Cover ----------------------------------------------------------------- */
 
@@ -159,23 +160,23 @@
 }
 
 .lots__heading {
-  font-size: 40px;
-  font-weight: 700;
-  text-transform: uppercase;
   padding: 0 0 27px 26px;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
 }
 
 .lots__card-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto; /* Если добавятся карточки, то они встанут в следующий ряд */
-  list-style: none;
   gap: 25px;
+  list-style: none;
 }
 
 .lots__card-list-item {
-  min-height: 600px;
   justify-self: center; /* тк я ограничил максимальную ширину элемента, то при большом расширении страницы, элементы уезжали чуть влево, сейчас поправил */
+  min-height: 600px;
 }
 
 .card-link {
@@ -183,13 +184,13 @@
 }
 
 .card {
-  color: #fff;
   position: relative;
   display: flex;
   flex-direction: column;
-  max-width: 400px; /* Показалось, что лучше ограничить ширину карточки, чтобы при увеличении ширины страницы они сильно не растягивались (по-моему так лучше выглядит) */
   justify-content: space-between;
+  max-width: 400px; /* Показалось, что лучше ограничить ширину карточки, чтобы при увеличении ширины страницы они сильно не растягивались (по-моему так лучше выглядит) */
   height: 100%;
+  color: #fff;
 }
 
 .card-image {
@@ -200,15 +201,15 @@
 }
 
 .card__title {
+  z-index: 2;
+  min-width: 334px;
   padding: 50px 40px 0;
-  font-size: 22px;
   font-weight: 700;
+  font-size: 22px;
   line-height: 120%;
   text-decoration-line: underline;
   text-underline-offset: 3px;
   text-transform: uppercase;
-  min-width: 334px;
-  z-index: 2;
 }
 
 .card__title-extended {
@@ -216,10 +217,10 @@
 }
 
 .card__text {
+  z-index: 2;
+  padding: 0 40px 50px;
   font-size: 20px;
   line-height: 120%;
-  padding: 0 40px 50px;
-  z-index: 2;
 }
 
 .card__text-extended {
@@ -232,12 +233,50 @@
 
 .lots__look-more-link {
   display: block;
-  font-size: 20px;
-  font-weight: 400;
-  text-decoration: none;
-  margin: 30px 0 20px 26px;
-  border-bottom: 1px solid;
   width: max-content;
+  margin: 30px 0 0 26px;
+  border-bottom: 1px solid;
+  font-weight: 400;
+  font-size: 20px;
+  text-decoration: none;
   cursor: pointer;
 }
+/* /Cards ----------------------------------------------------------------- */
 
+
+
+/* About ----------------------------------------------------------------- */
+.about {
+  display: grid;
+  grid-template-columns: 430px 1fr;
+  gap: 25px;
+  padding: 179px 24px 0;
+}
+
+.about__column a {
+  display: block;
+  height: 240px;
+  margin: 0 95px 356px;
+  border-radius: 50%;
+  background-color: #000;
+}
+
+.about__logo-image {
+  padding: 63px 46px;
+}
+
+.about__title {
+  padding: 101px 0 100px;
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
+
+.about__text {
+  font-size: 20px;
+  line-height: 115%; /* При сравнивании с pixel perfect с макетом, line-height - такой, в макете в свойствах текста line-height: normal; */
+}
+
+.about__text-extended {
+  padding-bottom: 25px;
+}
