--- a/styles/style.css
+++ b/styles/style.css
@@ -212,23 +212,11 @@
   text-transform: uppercase;
 }
 
-.card__title-extended {
-  word-spacing: 5px; /* В макете два пробела между "который" и "бросил", увеличил отступ, для соответствия макету */
-}
-
 .card__text {
   z-index: 2;
   padding: 0 40px 50px;
   font-size: 20px;
   line-height: 120%;
-}
-
-.card__text-extended {
-  min-height: 206px; /* В макете в первой карточке текст чуть выше, чем в остальных карточках можно было и паддинг увеличить для этой карточки, но решил сделать так */
-}
-
-.ellipsis {
-  letter-spacing: -1px; /* отступ у точек в троеточии уменьшил Сделал чтобы совпадало с макетом */
 }
 
 .lots__look-more-link {
@@ -261,24 +249,33 @@
   background-color: #000;
 }
 
+.about__column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .about__logo-image {
   padding: 63px 46px;
 }
 
 .about__title {
+  align-self: flex-start;
   padding: 101px 0 100px;
   font-weight: 700;
   font-size: 40px;
   text-transform: uppercase;
 }
 
+.about__text-container {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
 .about__text {
   font-size: 20px;
   line-height: 115%; /* При сравнивании с pixel perfect с макетом, line-height - такой, в макете в свойствах текста line-height: normal; */
-}
-
-.about__text-extended {
-  padding-bottom: 25px;
 }
 /* /About ----------------------------------------------------------------- */
 
